istio/vs-example.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: micro-b
  namespace: demo
spec:
  hosts:
  - micro-b
  http:
  # Canary
  - name: canary-release
    match:
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: micro-b
        subset: canary
  # Normal traffic
  - name: production
    route:
    - destination:
        host: micro-b
        subset: stable
      weight: 95
    - destination:
        host: micro-b
        subset: canary
      weight: 5
