istio/3-micro-a.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-a-to-b
  namespace: demo
spec:
  selector:
    matchLabels:
      app: micro-b
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/demo/sa/micro-a
